[tool.poetry]
name = "darts"
version = "1.0.0"
description = ""
authors = ["name <e@mail.com>"]

[tool.poetry.dependencies]
python = "*"
numpy = "*"
scipy = "*"
plotly = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

